--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,27 @@
   "license": "ISC",
   "dependencies": {
     "@types/passport": "^1.0.12",
+    "body-parser": "^1.20.2",
+    "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.3.4",
-    "passport": "^0.6.0"
+    "mongoose": "^7.4.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
+    "@types/connect-mongodb-session": "^2.4.4",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/node": "^20.4.2",
+    "@types/passport-local": "^1.0.35",
     "concurrently": "^8.2.0",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
