--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.11",
+    "@mui/x-date-pickers": "^6.15.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.10",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
