--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,10 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.2",
     "typescript": "5.1.6"
